[metadata]
name = PadAnalyser
version = 1.0.4
description = Image analysis tools for agar pad images of cells. 
author = Morten Kals
lisence = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Origramming Language :: Python :: 3.9
    Origramming Language :: Python :: 3.8
    Origramming Language :: Python :: 3.7
    Origramming Language :: Python :: 3.6
    Origramming Language :: Python :: 3 :: Only
    Origramming Language :: Python :: 3

[options]
install_requires = 
    six>=1.16.0
    ply>=3.11
python_requires = >= 3.6
package_dir = =src
packages = find_namespace:
include_package_data = True
zip_safe = no

[options.packages.find]
where = src

[options.package_data]
* = *.xml

[options.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 300